[package]
name = "clp-tdl-package"
version = "0.13.1-dev"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
aws-sdk-s3 = "1.121.0"
clp-rust-utils = { path = "../clp-rust-utils" }
non-empty-string = { version = "0.2.6", features = ["serde"] }
rmp-serde = "1.3.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
spider-core = { git = "https://github.com/y-scope/spider.git", branch = "main" }
spider-tdl = { git = "https://github.com/y-scope/spider.git", branch = "main", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
tokio = { version = "1.49.0", features = ["fs", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
