[package]
name = "compression-coordinator"
version = "0.13.1-dev"
edition = "2024"

[lib]
name = "compression_coordinator"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
clp-rust-utils = { path = "../clp-rust-utils" }
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
spider-client = { git = "https://github.com/y-scope/spider.git", branch = "main" }
spider-core = { git = "https://github.com/y-scope/spider.git", branch = "main" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
strsim = "0.11.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["time"] }
tracing = "0.1.44"

[dev-dependencies]
non-empty-string = "0.2.6"
