[package]
name = "compression-coordinator"
version = "0.13.1-dev"
edition = "2024"

[lib]
name = "compression_coordinator"
path = "src/lib.rs"

[[bin]]
name = "compression-coordinator"
path = "src/bin/compression_coordinator.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clp-rust-utils = { path = "../clp-rust-utils" }
const_format = "0.2.35"
rmp-serde = "1.3.1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
spider-client = { git = "https://github.com/y-scope/spider.git", branch = "main" }
spider-core = { git = "https://github.com/y-scope/spider.git", branch = "main" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
strsim = "0.11.1"
thiserror = "2.0.18"
tokio-util = "0.7.18"
tokio = { version = "1.52.3", features = ["time", "rt-multi-thread", "signal"] }
tonic = "0.14.6"
tracing = "0.1.44"
clap = { version = "4.6.4", features = ["derive"] }

[dev-dependencies]
non-empty-string = "0.2.6"
