[tool.poetry]
name = "compression-job-handler"
version = "0.1.0"
description = "Component for submitting compression jobs to CLP."
authors = ["YScope Inc. <dev@yscope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.10"
msgpack = "^1.0.6"
mysql-connector-python = "~8.0.26"
pydantic = "^1.8.2"
python-Levenshtein = "^0.21.1"
PyYAML = "^6.0.1"
zstandard = "^0.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
docformatter = "^1.7.5"
mypy = "^1.5.1"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"