[tool.poetry]
name = "compression-job-handler"
version = "0.0.3-dev"
description = "Component for submitting compression jobs to CLP."
authors = ["YScope Inc. <dev@yscope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.10"
msgpack = "^1.0.7"
pydantic = "^1.10.13"
zstandard = "~0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
